name: reflex-animated
version: 0.1.0.0
cabal-version: >=1.22
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: https://github.com/achirkin/reflex-animated
bug-reports: https://github.com/achirkin/reflex-animated/issues
synopsis: AnimationFrame and Pointer events in the reflex framework
description:
    The library provides a simple and fast interface for rendering animated objects and interacting with a user.
    It combines JS mouse, touch, and pointer events in a unified Haskell interface,
    which simplifies desktop-mobile compatibility.
    Lastly, it encapsulates requestAnimationFrame mechanics into simple play-pause interface,
    allowing to peform rendering either via a direct rendering callback or using dedicated events.
category: Web, GHCJS, reflex, reflex-frp
author: Artem Chirkin

source-repository head
    type: git
    location: https://github.com/achirkin/reflex-animated.git

library
    exposed-modules:
        Reflex.Dom.Widget.Animation
        Reflex.Dom.Widget.Animation.Types
    build-depends:
        base >=4.8 && <5,
        ghcjs-base >=0.2.0.0,
        reflex >=0.5,
        ghcjs-dom-jsffi >= 0.9.0.0,
        transformers >=0.5
    js-sources:
        jsbits/Animation.js
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Reflex.Dom.Widget.Animation.PointerKeeper
    ghc-options: -Wall -ferror-spans

executable test
    main-is: test.hs
    build-depends:
        base >=4.8 && <5,
        ghcjs-base >=0.2.0.0,
        reflex >=0.5,
        reflex-dom >=0.4,
        text >=1.2.0.0,
        containers >=0.5,
        ghcjs-dom-jsffi >= 0.9.0.0,
        transformers >=0.5
    cpp-options: -DGHCJS_BROWSER
    js-sources:
        jsbits/Animation.js
    default-language: Haskell2010
    hs-source-dirs: test src
    other-modules:
        Reflex.Dom.Widget.Animation
        Reflex.Dom.Widget.Animation.Types
        Reflex.Dom.Widget.Animation.PointerKeeper
    build-depends:
    ghc-options: -Wall -ferror-spans -O2 -dedupe

